--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>
@@ -60,8 +60,8 @@
                 </a>
             </h1>
             <input type="checkbox" id="chk">
-            <nav class="header__menu">
-                <ul>
+            <!-- <nav class="header__menu"> -->
+                <ul class="header__menu">
                     <li>
                         <a href="#">
                             about
@@ -94,7 +94,7 @@
                     </li>
                 </ul>
 
-            </nav>
+            <!-- </nav> -->
             <ul class="header__menu-icon">
                 <li>
                     <a href="#">
@@ -102,9 +102,9 @@
                     </a>
                 </li>
                 <li>
-                    <button type="button" href="#" data-toggle="modal" data-target="#exampleModal">
-                    <i class="fas fa-search"></i>
-                </button>
+                    <a type="button" data-toggle="modal" data-target="#exampleModal">
+                      <i class="fas fa-search"></i>
+                    </a>
 
                 </li>
             </ul>
@@ -295,58 +295,58 @@
                 <div class="what-we-do__content__img">
                     <img src="assets/img/service.png" alt="#">
                 </div>
-                <div class="what-we-do__content__text">
-                    <div class="text">
-                        <div class="text__title" id="text__title-01">
+                <div class="what-we-do__content__text" id="what-we-do__content__text1">
+                    <div class="text active">
+                        <div class="text__title" >
                             <div class="text__title-img">
                                 <img src="assets/img/wwd-icon-01.png" alt="">
                                 <p> PHOTOGRAPHY</p>
                             </div>
                             <div class="icon">
-                                <button onclick="myFunction1()">
-                            <i class="fas fa-chevron-up" id="icon-tranform-01"></i>
-                        </button>
+                                <button  >
+                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
+                                </button>
                             </div>
                         </div>
-                        <div class="text__content" id="text-01">
+                        <div class="text__content" >
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                             in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
                             sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
-                        <div class="text__title" id="text__title-02">
+                        <div class="text__title" >
                             <div class="text__title-img">
                                 <img src="assets/img/wwd-icon-02.png" alt="">
 
                                 <p> CREATIVITY</p>
                             </div>
                             <div class="icon">
-                                <button onclick="myFunction2()">
-                          <i class="fas fa-chevron-up" id="icon-tranform-02"></i>
-                      </button>
+                                <button  >
+                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
+                                </button>
                             </div>
                         </div>
-                        <div class="text__content" id="text-02">
+                        <div class="text__content" >
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                             in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
                             sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                         </div>
                     </div>
                     <div class="text">
-                        <div class="text__title" id="text__title-03">
+                        <div class="text__title" >
                             <div class="text__title-img">
                                 <img src="assets/img/wwd-icon-03.png" alt="">
 
                                 <p> WEB DESIGN</p>
                             </div>
                             <div class="icon">
-                                <button onclick="myFunction3()">
-                        <i class="fas fa-chevron-up" id="icon-tranform-03"></i>
-                    </button>
+                                <button  >
+                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
+                                </button>
                             </div>
                         </div>
-                        <div class="text__content" id="text-03">
+                        <div class="text__content" >
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
                             in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
                             sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -355,7 +355,7 @@
 
                 </div>
             </div>
-
+              
         </div>
         <!-- feed-back -->
         <div class="feed-back">
@@ -854,19 +854,15 @@
 
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document" >
             <div class="modal-content">
-
-                <div class="modal-body">
                     <form class="form-inline md-form form-sm active-purple active-purple-2 mt-2">
                         <div class="form-search">
                             <i class="fas fa-search" aria-hidden="true"></i>
                             <input class="form-control form-control-sm ml-3 w-75" type="text" placeholder="Search" aria-label="Search">
                         </div>
                     </form>
-                </div>
-
             </div>
         </div>
     </div>
