--- a/index.html
+++ b/index.html
@@ -285,78 +285,78 @@
         </div>
         <!-- what-we-do -->
         <div data-aos="fade-right" class="what-we-do">
-            <div class="title-section">
-                <span>Service</span>
-                <h2>WHAT WE DO</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </div>
-            <div class="what-we-do__content">
-                <div class="what-we-do__content__img">
-                    <img src="assets/img/service.png" alt="#">
-                </div>
-                <div class="what-we-do__content__text" id="what-we-do__content__text1">
-                    <div class="text active">
-                        <div class="text__title" >
-                            <div class="text__title-img">
-                                <img src="assets/img/wwd-icon-01.png" alt="">
-                                <p> PHOTOGRAPHY</p>
-                            </div>
-                            <div class="icon">
-                                <button  >
-                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="text__content" >
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </div>
-                    </div>
-                    <div class="text">
-                        <div class="text__title" >
-                            <div class="text__title-img">
-                                <img src="assets/img/wwd-icon-02.png" alt="">
+          <div class="title-section">
+              <span>Service</span>
+              <h2>WHAT WE DO</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eius mod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </p>
+          </div>
+          <div class="what-we-do__content">
+              <div class="what-we-do__content__img">
+                  <img src="assets/img/service.png" alt="#">
+              </div>
+              <div class="what-we-do__content__text">
+                  <div class="text">
+                      <div class="text__title" id="text__title-01">
+                          <div class="text__title-img">
+                              <img src="assets/img/wwd-icon-01.png" alt="">
+                              <p> PHOTOGRAPHY</p>
+                          </div>
+                          <div class="icon">
+                              <button onclick="myFunction1()">
+                          <i class="fas fa-chevron-up" id="icon-tranform-01"></i>
+                      </button>
+                          </div>
+                      </div>
+                      <div class="text__content" id="text-01">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                          in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </div>
+                  </div>
+                  <div class="text">
+                      <div class="text__title" id="text__title-02">
+                          <div class="text__title-img">
+                              <img src="assets/img/wwd-icon-02.png" alt="">
 
-                                <p> CREATIVITY</p>
-                            </div>
-                            <div class="icon">
-                                <button  >
-                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="text__content" >
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </div>
-                    </div>
-                    <div class="text">
-                        <div class="text__title" >
-                            <div class="text__title-img">
-                                <img src="assets/img/wwd-icon-03.png" alt="">
+                              <p> CREATIVITY</p>
+                          </div>
+                          <div class="icon">
+                              <button onclick="myFunction2()">
+                        <i class="fas fa-chevron-up" id="icon-tranform-02"></i>
+                    </button>
+                          </div>
+                      </div>
+                      <div class="text__content" id="text-02">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                          in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </div>
+                  </div>
+                  <div class="text">
+                      <div class="text__title" id="text__title-03">
+                          <div class="text__title-img">
+                              <img src="assets/img/wwd-icon-03.png" alt="">
 
-                                <p> WEB DESIGN</p>
-                            </div>
-                            <div class="icon">
-                                <button  >
-                                    <i class="fas fa-chevron-up icon-transform-01" ></i>
-                                </button>
-                            </div>
-                        </div>
-                        <div class="text__content" >
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
-                            in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
-                            sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </div>
-                    </div>
+                              <p> WEB DESIGN</p>
+                          </div>
+                          <div class="icon">
+                              <button onclick="myFunction3()">
+                      <i class="fas fa-chevron-up" id="icon-tranform-03"></i>
+                  </button>
+                          </div>
+                      </div>
+                      <div class="text__content" id="text-03">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                          in reprehenderit in voluptate velit esse citlum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br>                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur
+                          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                      </div>
+                  </div>
 
-                </div>
-            </div>
-              
-        </div>
+              </div>
+          </div>
+
+      </div>
         <!-- feed-back -->
         <div class="feed-back">
             <div class="feed-back-width">
